# tsunami-ui

./: .gitattributes  .gitignore  .gitmodules  AGENT.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  build_and_run.bat
src/: main.cpp
src/app/: Application.cpp  Application.h
src/geo/: Reprojection.h  TileProvider.cpp  TileProvider.h
src/io/: AsyncGridLoader.cpp  AsyncGridLoader.h  AsyncResultLoader.cpp  AsyncResultLoader.h  BinaryCache.cpp  BinaryCache.h
src/model/: GridDataset.cpp  GridDataset.h  ParameterSet.cpp  ParameterSet.h  Project.cpp  Project.h  ResultDataset.cpp  ResultDataset.h  RunSession.cpp  RunSession.h
src/ui/: AnimationPlayer.cpp  AnimationPlayer.h  CoastHistogramTool.cpp  CoastHistogramTool.h  GradientEditor.cpp  GradientEditor.h  GridScene.cpp  GridScene.h  GridViewerWidget.cpp  GridViewerWidget.h  MainWindow.cpp  MainWindow.h  ParameterEditorWidget.cpp  ParameterEditorWidget.h  ProfileTool.cpp  ProfileTool.h  ResultsPanel.cpp  ResultsPanel.h  SimulationRunnerWidget.cpp  SimulationRunnerWidget.h
